chapter7/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: my-app:1.0.0
    volumeMounts:
    - name: log-pvc
      mountPath: /app/logs
  volumes:
  - name: log-pvc
    persistentVolumeClaim:
      claimName: log-pv-claim-01
