chapter7/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 1800
  selector:
    app: this-is-my-app
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 8080
