chapter7/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
annotation:
  nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp.mydomain.com"
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: my-service
            port:
              number: 3000
